modified calculation logic

--- a/index.html
+++ b/index.html
@@ -68,42 +68,43 @@
             <table>
                 <tr>
                     <td></td> <!-- Gap -->
-                    <td id="abjadKeys"><button onclick="addCharacter('ض')" id="abjad-800" data-ord="ord-26" class="abjad-calc-button">ض</button></td>
-                    <td id="abjadKeys"><button onclick="addCharacter('ث')" id="abjad-500" data-ord="ord-23" class="abjad-calc-button">ث</button></td>
-                    <td id="abjadKeys"><button onclick="addCharacter('ر')" id="abjad-200" data-ord="ord-20" class="abjad-calc-button">ر</button></td>
-                    <td id="abjadKeys"><button onclick="addCharacter('ف')" id="abjad-80" data-ord="ord-17" class="abjad-calc-button">ف</button></td>
+                    <td id="abjadKeys"><button id="abjad-800" data-ord="ord-26" class="abjad-calc-button" data-char="ض">ض</button></td>
+                    <td id="abjadKeys"><button id="abjad-500" data-ord="ord-23" class="abjad-calc-button" data-char="ث">ث</button></td>
+                    <td id="abjadKeys"><button id="abjad-200" data-ord="ord-20" class="abjad-calc-button" data-char="ر">ر</button></td>
+                    <td id="abjadKeys"><button id="abjad-80" data-ord="ord-17" class="abjad-calc-button" data-char="ف">ف</button></td>
                     <td></td> <!-- Gap -->
-                    <td id="abjadKeys"><button onclick="addCharacter('ن')" id="abjad-50" data-ord="ord-14" class="abjad-calc-button">ن</button></td>
-                    <td id="abjadKeys"><button onclick="addCharacter('ك')" id="abjad-20" data-ord="ord-11" class="abjad-calc-button">ك</button></td>
-                    <td id="abjadKeys"><button onclick="addCharacter('ح')" id="abjad-8" data-ord="ord-8" class="abjad-calc-button">ح</button></td>
-                    <td id="abjadKeys"><button onclick="addCharacter('٥')" id="abjad-5" data-ord="ord-5" class="abjad-calc-button">٥</button></td>
+                    <td id="abjadKeys"><button id="abjad-50" data-ord="ord-14" class="abjad-calc-button" data-char="ن">ن</button></td>
+                    <td id="abjadKeys"><button id="abjad-20" data-ord="ord-11" class="abjad-calc-button" data-char="ك">ك</button></td>
+                    <td id="abjadKeys"><button id="abjad-8" data-ord="ord-8" class="abjad-calc-button" data-char="ح">ح</button></td>
+                    <td id="abjadKeys"><button id="abjad-5" data-ord="ord-5" class="abjad-calc-button" data-char="ه">٥</button></td>
                     <td></td> <!-- Gap -->
                 </tr>
                 <tr>
-                    <td id="abjadKeys"><button onclick="addCharacter('أ')" id="abjad-1" data-ord="ord-1" class="abjad-calc-button">أ</button></td> 
-                    <td id="abjadKeys"><button onclick="addCharacter('ظ')" id="abjad-900" data-ord="ord-27" class="abjad-calc-button">ظ</button></td>
-                    <td id="abjadKeys"><button onclick="addCharacter('خ')" id="abjad-600" data-ord="ord-24" class="abjad-calc-button">خ</button></td> 
-                    <td id="abjadKeys"><button onclick="addCharacter('ش')" id="abjad-300" data-ord="ord-21" class="abjad-calc-button">ش</button></td>
-                    <td id="abjadKeys"><button onclick="addCharacter('ص')" id="abjad-90" data-ord="ord-18" class="abjad-calc-button">ص</button></td>
+                    <td id="abjadKeys"><button id="abjad-1" data-ord="ord-1" class="abjad-calc-button" data-char="أ">أ</button></td> 
+                    <td id="abjadKeys"><button id="abjad-900" data-ord="ord-27" class="abjad-calc-button" data-char="ظ">ظ</button></td>
+                    <td id="abjadKeys"><button id="abjad-600" data-ord="ord-24" class="abjad-calc-button" data-char="خ">خ</button></td> 
+                    <td id="abjadKeys"><button id="abjad-300" data-ord="ord-21" class="abjad-calc-button" data-char="ش">ش</button></td>
+                    <td id="abjadKeys"><button id="abjad-90" data-ord="ord-18" class="abjad-calc-button" data-char="ص">ص</button></td>
+                    <!-- <td id="abjadKeys"><button class="abjad-calc-button" data-char=" ّ"> ّ</button></td> -->
                     <td></td> <!-- Gap -->
-                    <td id="abjadKeys"><button onclick="addCharacter('س')" id="abjad-60" data-ord="ord-15" class="abjad-calc-button">س</button></td>
-                    <td id="abjadKeys"><button onclick="addCharacter('ل')" id="abjad-30" data-ord="ord-12" class="abjad-calc-button">ل</button></td>
-                    <td id="abjadKeys"><button onclick="addCharacter('ط')" id="abjad-9" data-ord="ord-9" class="abjad-calc-button">ط</button></td>
-                    <td id="abjadKeys"><button onclick="addCharacter('و')" id="abjad-6" data-ord="ord-6" class="abjad-calc-button">و</button></td>
-                    <td id="abjadKeys"><button onclick="addCharacter('ج')" id="abjad-3" data-ord="ord-3" class="abjad-calc-button">ج</button></td>
+                    <td id="abjadKeys"><button id="abjad-60" data-ord="ord-15" class="abjad-calc-button" data-char="س">س</button></td>
+                    <td id="abjadKeys"><button id="abjad-30" data-ord="ord-12" class="abjad-calc-button" data-char="ل">ل</button></td>
+                    <td id="abjadKeys"><button id="abjad-9" data-ord="ord-9" class="abjad-calc-button" data-char="ط">ط</button></td>
+                    <td id="abjadKeys"><button id="abjad-6" data-ord="ord-6" class="abjad-calc-button" data-char="و">و</button></td>
+                    <td id="abjadKeys"><button id="abjad-3" data-ord="ord-3" class="abjad-calc-button" data-char="ج">ج</button></td>
                 </tr>
                 <tr>
-                    <td id="abjadKeys"><button onclick="addCharacter('ب')" id="abjad-2" data-ord="ord-2" class="abjad-calc-button">ب</button></td>
-                    <td id="abjadKeys"><button onclick="addCharacter('غ')" id="abjad-1000" data-ord="ord-28" class="abjad-calc-button">غ</button></td>
-                    <td id="abjadKeys"><button onclick="addCharacter('ذ')" id="abjad-700" data-ord="ord-25" class="abjad-calc-button">ذ</button></td>
-                    <td id="abjadKeys"><button onclick="addCharacter('ت')" id="abjad-400" data-ord="ord-22" class="abjad-calc-button">ت</button></td>
-                    <td id="abjadKeys"><button onclick="addCharacter('ق')" id="abjad-100" data-ord="ord-19" class="abjad-calc-button">ق</button></td>
+                    <td id="abjadKeys"><button id="abjad-2" data-ord="ord-2" class="abjad-calc-button" data-char="ب">ب</button></td>
+                    <td id="abjadKeys"><button id="abjad-1000" data-ord="ord-28" class="abjad-calc-button" data-char="غ">غ</button></td>
+                    <td id="abjadKeys"><button id="abjad-700" data-ord="ord-25" class="abjad-calc-button" data-char="ذ">ذ</button></td>
+                    <td id="abjadKeys"><button id="abjad-400" data-ord="ord-22" class="abjad-calc-button" data-char="ت">ت</button></td>
+                    <td id="abjadKeys"><button id="abjad-100" data-ord="ord-19" class="abjad-calc-button" data-char="ق">ق</button></td>
                     <td></td> <!-- Gap -->
-                    <td id="abjadKeys"><button onclick="addCharacter('ع')" id="abjad-70" data-ord="ord-16" class="abjad-calc-button">ع</button></td>
-                    <td id="abjadKeys"><button onclick="addCharacter('م')" id="abjad-40" data-ord="ord-13" class="abjad-calc-button">م</button></td>
-                    <td id="abjadKeys"><button onclick="addCharacter('ي')" id="abjad-10" data-ord="ord-10" class="abjad-calc-button">ي</button></td>
-                    <td id="abjadKeys"><button onclick="addCharacter('ز')" id="abjad-7" data-ord="ord-7" class="abjad-calc-button">ز</button></td>
-                    <td id="abjadKeys"><button onclick="addCharacter('د')" id="abjad-4" data-ord="ord-4" class="abjad-calc-button">د</button></td>
+                    <td id="abjadKeys"><button id="abjad-70" data-ord="ord-16" class="abjad-calc-button" data-char="ع">ع</button></td>
+                    <td id="abjadKeys"><button id="abjad-40" data-ord="ord-13" class="abjad-calc-button" data-char="م">م</button></td>
+                    <td id="abjadKeys"><button id="abjad-10" data-ord="ord-10" class="abjad-calc-button" data-char="ي">ي</button></td>
+                    <td id="abjadKeys"><button id="abjad-7" data-ord="ord-7" class="abjad-calc-button" data-char="ز">ز</button></td>
+                    <td id="abjadKeys"><button id="abjad-4" data-ord="ord-4" class="abjad-calc-button" data-char="د">د</button></td>
                 </tr>
             </table>
         </div>
@@ -155,18 +156,18 @@
         </div>
 
         <!-- Calculate button / textbox -->
-        <div id="calculate">
-            <input type="text" id="output" size="50px" style="font-size: large;" readonly />
+        <div class="result-container">
+            <textarea id="output" rows="3" placeholder="Arabic text here..." readonly></textarea>
 
             <br><br>
 
-            <input type="text" id="abjadValue" readonly />
-        
+            <input type="text" id="abjadValue" readonly placeholder="Abjad Value" >
+
             <br><br>
 
             <button onclick="calculate()">Calculate</button>
             <button onclick="deleteChar()">Delete</button>
-            <button onclick="clearOutput()">Clear</button>
+            <button onclick="clearOutput()">Clear</button> 
         </div>
     </div>
 </body>
