--- a/index.html
+++ b/index.html
@@ -23,42 +23,42 @@
             <table>
                 <tr>
                     <td></td> <!-- Gap -->
-                    <td id="ord-26">26</td>
-                    <td id="ord-23">23</td>
-                    <td id="ord-20">20</td>
-                    <td id="ord-17">17</td>
+                    <td id="ord-26" class="sun">26</td>
+                    <td id="ord-23" class="sun">23</td>
+                    <td id="ord-20" class="sun">20</td>
+                    <td id="ord-17" class="moon">17</td>
                     <td></td> <!-- Gap -->
-                    <td id="ord-14">14</td>
-                    <td id="ord-11">11</td>
-                    <td id="ord-8">8</td>
-                    <td id="ord-5">5</td>
+                    <td id="ord-14" class="sun">14</td>
+                    <td id="ord-11" class="moon">11</td>
+                    <td id="ord-8" class="moon">8</td>
+                    <td id="ord-5" class="moon">5</td>
                     <td></td> <!-- Gap -->
                 </tr>
                 <tr>
-                    <td id="ord-1">1</td> 
-                    <td id="ord-27">27</td>
-                    <td id="ord-24">24</td> 
-                    <td id="ord-21">21</td>
-                    <td id="ord-18">18</td>
+                    <td id="ord-1" class="moon">1</td> 
+                    <td id="ord-27" class="sun">27</td>
+                    <td id="ord-24" class="moon">24</td> 
+                    <td id="ord-21" class="sun">21</td>
+                    <td id="ord-18" class="sun">18</td>
                     <td></td> <!-- Gap -->
-                    <td id="ord-15">15</td>
-                    <td id="ord-12">12</td>
-                    <td id="ord-9">9</td>
-                    <td id="ord-6">6</td>
-                    <td id="ord-3">3</td>
+                    <td id="ord-15" class="sun">15</td>
+                    <td id="ord-12" class="sun">12</td>
+                    <td id="ord-9" class="sun">9</td>
+                    <td id="ord-6" class="moon">6</td>
+                    <td id="ord-3" class="moon">3</td>
                 </tr>
                 <tr>
-                    <td id="ord-2">2</td> 
-                    <td id="ord-28">28</td>
-                    <td id="ord-25">25</td>
-                    <td id="ord-22">22</td>
-                    <td id="ord-19">19</td>
+                    <td id="ord-2" class="moon">2</td> 
+                    <td id="ord-28" class="moon">28</td>
+                    <td id="ord-25" class="sun">25</td>
+                    <td id="ord-22" class="sun">22</td>
+                    <td id="ord-19" class="moon">19</td>
                     <td></td> <!-- Gap -->
-                    <td id="ord-16">16</td>
-                    <td id="ord-13">13</td>
-                    <td id="ord-10">10</td>
-                    <td id="ord-7">7</td>
-                    <td id="ord-4">4</td>
+                    <td id="ord-16" class="moon">16</td>
+                    <td id="ord-13" class="moon">13</td>
+                    <td id="ord-10" class="moon">10</td>
+                    <td id="ord-7" class="sun">7</td>
+                    <td id="ord-4" class="sun">4</td>
                 </tr>
             </table>
         </div>
@@ -68,43 +68,43 @@
             <table>
                 <tr>
                     <td></td> <!-- Gap -->
-                    <td id="abjadKeys"><button id="abjad-800" data-ord="ord-26" class="abjad-calc-button" data-char="ض">ض</button></td>
-                    <td id="abjadKeys"><button id="abjad-500" data-ord="ord-23" class="abjad-calc-button" data-char="ث">ث</button></td>
-                    <td id="abjadKeys"><button id="abjad-200" data-ord="ord-20" class="abjad-calc-button" data-char="ر">ر</button></td>
-                    <td id="abjadKeys"><button id="abjad-80" data-ord="ord-17" class="abjad-calc-button" data-char="ف">ف</button></td>
+                    <td id="abjadKeys"><button id="abjad-800" data-ord="ord-26" class="abjad-calc-button sun" data-char="ض">ض</button></td>
+                    <td id="abjadKeys"><button id="abjad-500" data-ord="ord-23" class="abjad-calc-button sun" data-char="ث">ث</button></td>
+                    <td id="abjadKeys"><button id="abjad-200" data-ord="ord-20" class="abjad-calc-button sun" data-char="ر">ر</button></td>
+                    <td id="abjadKeys"><button id="abjad-80" data-ord="ord-17" class="abjad-calc-button moon" data-char="ف">ف</button></td>
                     <td></td> <!-- Gap -->
-                    <td id="abjadKeys"><button id="abjad-50" data-ord="ord-14" class="abjad-calc-button" data-char="ن">ن</button></td>
-                    <td id="abjadKeys"><button id="abjad-20" data-ord="ord-11" class="abjad-calc-button" data-char="ك">ك</button></td>
-                    <td id="abjadKeys"><button id="abjad-8" data-ord="ord-8" class="abjad-calc-button" data-char="ح">ح</button></td>
-                    <td id="abjadKeys"><button id="abjad-5" data-ord="ord-5" class="abjad-calc-button" data-char="ه">٥</button></td>
+                    <td id="abjadKeys"><button id="abjad-50" data-ord="ord-14" class="abjad-calc-button sun" data-char="ن">ن</button></td>
+                    <td id="abjadKeys"><button id="abjad-20" data-ord="ord-11" class="abjad-calc-button moon" data-char="ك">ك</button></td>
+                    <td id="abjadKeys"><button id="abjad-8" data-ord="ord-8" class="abjad-calc-button moon" data-char="ح">ح</button></td>
+                    <td id="abjadKeys"><button id="abjad-5" data-ord="ord-5" class="abjad-calc-button moon" data-char="ه">٥</button></td>
                     <td></td> <!-- Gap -->
                 </tr>
                 <tr>
-                    <td id="abjadKeys"><button id="abjad-1" data-ord="ord-1" class="abjad-calc-button" data-char="أ">أ</button></td> 
-                    <td id="abjadKeys"><button id="abjad-900" data-ord="ord-27" class="abjad-calc-button" data-char="ظ">ظ</button></td>
-                    <td id="abjadKeys"><button id="abjad-600" data-ord="ord-24" class="abjad-calc-button" data-char="خ">خ</button></td> 
-                    <td id="abjadKeys"><button id="abjad-300" data-ord="ord-21" class="abjad-calc-button" data-char="ش">ش</button></td>
-                    <td id="abjadKeys"><button id="abjad-90" data-ord="ord-18" class="abjad-calc-button" data-char="ص">ص</button></td>
+                    <td id="abjadKeys"><button id="abjad-1" data-ord="ord-1" class="abjad-calc-button moon" data-char="أ">أ</button></td> 
+                    <td id="abjadKeys"><button id="abjad-900" data-ord="ord-27" class="abjad-calc-button sun" data-char="ظ">ظ</button></td>
+                    <td id="abjadKeys"><button id="abjad-600" data-ord="ord-24" class="abjad-calc-button moon" data-char="خ">خ</button></td> 
+                    <td id="abjadKeys"><button id="abjad-300" data-ord="ord-21" class="abjad-calc-button sun" data-char="ش">ش</button></td>
+                    <td id="abjadKeys"><button id="abjad-90" data-ord="ord-18" class="abjad-calc-button sun" data-char="ص">ص</button></td>
                     <!-- <td id="abjadKeys"><button class="abjad-calc-button" data-char=" ّ"> ّ</button></td> -->
                     <td></td> <!-- Gap -->
-                    <td id="abjadKeys"><button id="abjad-60" data-ord="ord-15" class="abjad-calc-button" data-char="س">س</button></td>
-                    <td id="abjadKeys"><button id="abjad-30" data-ord="ord-12" class="abjad-calc-button" data-char="ل">ل</button></td>
-                    <td id="abjadKeys"><button id="abjad-9" data-ord="ord-9" class="abjad-calc-button" data-char="ط">ط</button></td>
-                    <td id="abjadKeys"><button id="abjad-6" data-ord="ord-6" class="abjad-calc-button" data-char="و">و</button></td>
-                    <td id="abjadKeys"><button id="abjad-3" data-ord="ord-3" class="abjad-calc-button" data-char="ج">ج</button></td>
+                    <td id="abjadKeys"><button id="abjad-60" data-ord="ord-15" class="abjad-calc-button sun" data-char="س">س</button></td>
+                    <td id="abjadKeys"><button id="abjad-30" data-ord="ord-12" class="abjad-calc-button sun" data-char="ل">ل</button></td>
+                    <td id="abjadKeys"><button id="abjad-9" data-ord="ord-9" class="abjad-calc-button sun" data-char="ط">ط</button></td>
+                    <td id="abjadKeys"><button id="abjad-6" data-ord="ord-6" class="abjad-calc-button moon" data-char="و">و</button></td>
+                    <td id="abjadKeys"><button id="abjad-3" data-ord="ord-3" class="abjad-calc-button moon" data-char="ج">ج</button></td>
                 </tr>
                 <tr>
-                    <td id="abjadKeys"><button id="abjad-2" data-ord="ord-2" class="abjad-calc-button" data-char="ب">ب</button></td>
-                    <td id="abjadKeys"><button id="abjad-1000" data-ord="ord-28" class="abjad-calc-button" data-char="غ">غ</button></td>
-                    <td id="abjadKeys"><button id="abjad-700" data-ord="ord-25" class="abjad-calc-button" data-char="ذ">ذ</button></td>
-                    <td id="abjadKeys"><button id="abjad-400" data-ord="ord-22" class="abjad-calc-button" data-char="ت">ت</button></td>
-                    <td id="abjadKeys"><button id="abjad-100" data-ord="ord-19" class="abjad-calc-button" data-char="ق">ق</button></td>
+                    <td id="abjadKeys"><button id="abjad-2" data-ord="ord-2" class="abjad-calc-button moon" data-char="ب">ب</button></td>
+                    <td id="abjadKeys"><button id="abjad-1000" data-ord="ord-28" class="abjad-calc-button moon" data-char="غ">غ</button></td>
+                    <td id="abjadKeys"><button id="abjad-700" data-ord="ord-25" class="abjad-calc-button sun" data-char="ذ">ذ</button></td>
+                    <td id="abjadKeys"><button id="abjad-400" data-ord="ord-22" class="abjad-calc-button sun" data-char="ت">ت</button></td>
+                    <td id="abjadKeys"><button id="abjad-100" data-ord="ord-19" class="abjad-calc-button moon" data-char="ق">ق</button></td>
                     <td></td> <!-- Gap -->
-                    <td id="abjadKeys"><button id="abjad-70" data-ord="ord-16" class="abjad-calc-button" data-char="ع">ع</button></td>
-                    <td id="abjadKeys"><button id="abjad-40" data-ord="ord-13" class="abjad-calc-button" data-char="م">م</button></td>
-                    <td id="abjadKeys"><button id="abjad-10" data-ord="ord-10" class="abjad-calc-button" data-char="ي">ي</button></td>
-                    <td id="abjadKeys"><button id="abjad-7" data-ord="ord-7" class="abjad-calc-button" data-char="ز">ز</button></td>
-                    <td id="abjadKeys"><button id="abjad-4" data-ord="ord-4" class="abjad-calc-button" data-char="د">د</button></td>
+                    <td id="abjadKeys"><button id="abjad-70" data-ord="ord-16" class="abjad-calc-button moon" data-char="ع">ع</button></td>
+                    <td id="abjadKeys"><button id="abjad-40" data-ord="ord-13" class="abjad-calc-button moon" data-char="م">م</button></td>
+                    <td id="abjadKeys"><button id="abjad-10" data-ord="ord-10" class="abjad-calc-button moon" data-char="ي">ي</button></td>
+                    <td id="abjadKeys"><button id="abjad-7" data-ord="ord-7" class="abjad-calc-button sun" data-char="ز">ز</button></td>
+                    <td id="abjadKeys"><button id="abjad-4" data-ord="ord-4" class="abjad-calc-button sun" data-char="د">د</button></td>
                 </tr>
             </table>
         </div>
@@ -115,49 +115,49 @@
             <table>
                 <tr>
                     <td></td> <!-- Gap -->
-                    <td id="num-800">800</td>
-                    <td id="num-500">500</td>
-                    <td id="num-200">200</td>
-                    <td id="num-80">80</td>
+                    <td id="num-800" class="sun">800</td>
+                    <td id="num-500" class="sun">500</td>
+                    <td id="num-200" class="sun">200</td>
+                    <td id="num-80" class="moon">80</td>
                     <td></td> <!-- Gap -->
-                    <td id="num-50">50</td>
-                    <td id="num-20">20</td>
-                    <td id="num-8">8</td>
-                    <td id="num-5">5</td>
+                    <td id="num-50" class="sun">50</td>
+                    <td id="num-20" class="moon">20</td>
+                    <td id="num-8" class="moon">8</td>
+                    <td id="num-5" class="moon">5</td>
                     <td></td> <!-- Gap -->
                 </tr>
                 <tr>
-                    <td id="num-1">1</td> 
-                    <td id="num-900">900</td>
-                    <td id="num-600">600</td> 
-                    <td id="num-300">300</td>
-                    <td id="num-90">90</td>
+                    <td id="num-1" class="moon">1</td> 
+                    <td id="num-900" class="sun">900</td>
+                    <td id="num-600" class="moon">600</td> 
+                    <td id="num-300" class="sun">300</td>
+                    <td id="num-90" class="sun">90</td>
                     <td></td> <!-- Gap -->
-                    <td id="num-60">60</td>
-                    <td id="num-30">30</td>
-                    <td id="num-9">9</td>
-                    <td id="num-6">6</td>
-                    <td id="num-3">3</td>
+                    <td id="num-60" class="sun">60</td>
+                    <td id="num-30" class="sun">30</td>
+                    <td id="num-9" class="sun">9</td>
+                    <td id="num-6" class="moon">6</td>
+                    <td id="num-3" class="moon">3</td>
                 </tr>
                 <tr>
-                    <td id="num-2">2</td> 
-                    <td id="num-1000">1000</td>
-                    <td id="num-700">700</td>
-                    <td id="num-400">400</td>
-                    <td id="num-100">100</td>
+                    <td id="num-2" class="moon">2</td> 
+                    <td id="num-1000" class="moon">1000</td>
+                    <td id="num-700" class="sun">700</td>
+                    <td id="num-400" class="sun">400</td>
+                    <td id="num-100" class="moon">100</td>
                     <td></td> <!-- Gap -->
-                    <td id="num-70">70</td>
-                    <td id="num-40">40</td>
-                    <td id="num-10">10</td>
-                    <td id="num-7">7</td>
-                    <td id="num-4">4</td>
+                    <td id="num-70" class="moon">70</td>
+                    <td id="num-40" class="moon">40</td>
+                    <td id="num-10" class="moon">10</td>
+                    <td id="num-7" class="sun">7</td>
+                    <td id="num-4" class="sun">4</td>
                 </tr>
             </table>
         </div>
 
         <!-- Calculate button / textbox -->
         <div class="result-container">
-            <textarea id="output" rows="3" placeholder="Arabic text here..." readonly></textarea>
+            <textarea id="output" rows="3" placeholder="Arabic text here..." readonly style="width: 485px; height: 61px;"></textarea>
 
             <br><br>
 
